[tool.poetry]
name = "ordermanagement"
version = "0.1.0"
description = ""
authors = ["vinosa75 <vinosa75@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8"
django = "3.2.16"
dj-database-url = "^1.0.0"
psycopg2-binary = "^2.9.5"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
gunicorn = "^20.1.0"
celery = "5.2.7"
pip = "^22.3"
install = "^1.3.5"
importlib-metadata = "4.13.0"
setuptools = "57.0.0"


[build-system]
requires = ["setuptools", "poetry_core"]
build-backend = "poetry.core.masonry.api"
